testsuite/tests/checks/raise_builtin/test.out
src.adb:5:4: error: raising_predefined_exceptions - rule violation
5 |    raise Program_Error with "Message";
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

